package seedu.address.logic;

import static seedu.address.logic.Messages.MESSAGE_UNCLEAR_CLEAR_CONFIRMATION;
import static seedu.address.logic.Messages.MESSAGE_UNCLEAR_DELETE_CONFIRMATION;

import java.io.IOException;
import java.nio.file.AccessDeniedException;
import java.nio.file.Path;
import java.util.Collections;
import java.util.List;
import java.util.Optional;
import java.util.logging.Logger;

import javafx.collections.ObservableList;
import seedu.address.commons.core.GuiSettings;
import seedu.address.commons.core.LogsCenter;
import seedu.address.logic.commands.Command;
import seedu.address.logic.commands.CommandResult;
import seedu.address.logic.commands.FindCommand;
import seedu.address.logic.commands.exceptions.CommandException;
import seedu.address.logic.parser.AddressBookParser;
import seedu.address.logic.parser.exceptions.ParseException;
import seedu.address.model.Model;
import seedu.address.model.ReadOnlyAddressBook;
import seedu.address.model.person.Person;
import seedu.address.storage.Storage;

/**
 * The main LogicManager of the app.
 */
public class LogicManager implements Logic {
    public static final String FILE_OPS_ERROR_FORMAT = "Could not save data due to the following error: %s";

    public static final String FILE_OPS_PERMISSION_ERROR_FORMAT =
            "Could not save data to file %s due to insufficient permissions to write to the file or the folder.";

    private final Logger logger = LogsCenter.getLogger(LogicManager.class);

    private final Model model;
    private final Storage storage;
    private final AddressBookParser addressBookParser;

    private List<String> lastUsedFindKeywords = List.of();

    /**
     * Constructs a {@code LogicManager} with the given {@code Model} and {@code Storage}.
     */
    public LogicManager(Model model, Storage storage) {
        this.model = model;
        this.storage = storage;
        addressBookParser = new AddressBookParser();
    }

    /**
     * Checks whether a {@code DeleteCommand} or {@code ClearCommand} have pending confirmations.
     * Helper function to ensure that the correct error message is displayed to the user in GUI.
     * @param commandText The text being parsed.
     * @throws ParseException The error message that is displayed to the reader by the UI layer.
     */
    private void checkPendingConfirmation(String commandText) throws ParseException {
        if (!commandText.equals("y") && !commandText.equals("n")) {
            if (addressBookParser.isRecognizedCommand(commandText)) {
                if (model.isDeletePending() || model.isClearPending()) {
                    model.clearPendingClear();
                    model.clearPendingDeletion();
                }
            } else {
                if (model.isDeletePending()) {
                    throw new ParseException(MESSAGE_UNCLEAR_DELETE_CONFIRMATION);
                }
                if (model.isClearPending()) {
                    throw new ParseException(MESSAGE_UNCLEAR_CLEAR_CONFIRMATION);
                }
            }
        }
    }

    @Override
    public CommandResult execute(String commandText) throws CommandException, ParseException {
        logger.info("----------------[USER COMMAND][" + commandText + "]");

        checkPendingConfirmation(commandText);

        CommandResult commandResult;
        Command command = addressBookParser.parseCommand(commandText);
        commandResult = command.execute(model);

        if (command instanceof FindCommand) {
            FindCommand findCommand = (FindCommand) command;
            lastUsedFindKeywords = findCommand.getKeywords();
        } else {
            lastUsedFindKeywords = Collections.emptyList();
        }

        try {
            storage.saveAddressBook(model.getAddressBook());
        } catch (AccessDeniedException e) {
            throw new CommandException(String.format(FILE_OPS_PERMISSION_ERROR_FORMAT, e.getMessage()), e);
        } catch (IOException ioe) {
            throw new CommandException(String.format(FILE_OPS_ERROR_FORMAT, ioe.getMessage()), ioe);
        }

        return commandResult;
    }

    @Override
    public ReadOnlyAddressBook getAddressBook() {
        return model.getAddressBook();
    }

    @Override
    public ObservableList<Person> getFilteredPersonList() {
        return model.getFilteredPersonList();
    }

    @Override
    public Path getAddressBookFilePath() {
        return model.getAddressBookFilePath();
    }

    @Override
    public GuiSettings getGuiSettings() {
        return model.getGuiSettings();
    }

    @Override
    public void setGuiSettings(GuiSettings guiSettings) {
        model.setGuiSettings(guiSettings);
    }

    @Override
    public Optional<List<String>> getLastUsedFindKeywords() {
        return Optional.of(lastUsedFindKeywords);
    }
}
